Chore: Execution changes

--- a/notebooks/Gensim word vector visualization.ipynb
+++ b/notebooks/Gensim word vector visualization.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22451/2717871490.py:3: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
+      "/tmp/ipykernel_4446/2717871490.py:3: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
       "  glove2word2vec(glove_file, word2vec_glove_file)\n"
      ]
     },
@@ -89,71 +89,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 3.7293e-01,  3.8503e-01,  7.1086e-01, -6.5911e-01, -1.0128e-03,\n",
-       "        9.2715e-01,  2.7615e-01, -5.6203e-02, -2.4294e-01,  2.4632e-01,\n",
-       "       -1.8449e-01,  3.1398e-01,  4.8983e-01,  9.2560e-02,  3.2958e-01,\n",
-       "        1.5056e-01,  5.7317e-01, -1.8529e-01, -5.2277e-01,  4.6191e-01,\n",
-       "        9.2038e-01,  3.1001e-02, -1.6246e-01, -4.0567e-01,  7.8621e-01,\n",
-       "        5.7722e-01, -5.3501e-01, -6.8228e-01,  1.6987e-01,  3.6310e-01,\n",
-       "       -7.1773e-02,  4.7233e-01,  2.7806e-02, -1.4951e-01,  1.7543e-01,\n",
-       "       -3.7573e-01, -7.8517e-01,  5.8171e-01,  8.6859e-01,  3.1445e-02,\n",
-       "       -4.5897e-01, -4.0917e-02,  9.5897e-01, -1.6975e-01,  1.3045e-01,\n",
-       "        2.7434e-01, -6.9485e-02,  2.2402e-02,  2.4977e-01, -2.1536e-01,\n",
-       "       -3.2406e-01, -3.9867e-01,  6.8613e-01,  1.7923e+00, -3.7848e-01,\n",
-       "       -2.2477e+00, -7.7025e-01,  4.6582e-01,  1.2411e+00,  5.7756e-01,\n",
-       "        4.1151e-01,  8.4328e-01, -5.4259e-01, -1.6715e-01,  7.3927e-01,\n",
-       "       -9.3477e-02,  9.0278e-01,  5.0889e-01, -5.0031e-01,  2.6451e-01,\n",
-       "        1.5443e-01, -2.9432e-01,  1.0906e-01, -2.6667e-01,  3.5438e-01,\n",
-       "        4.9079e-02,  1.8018e-01, -5.8590e-01, -5.5542e-01, -2.8987e-01,\n",
-       "        7.4278e-01,  3.4530e-01, -2.8757e-02, -2.2646e-01, -1.3113e+00,\n",
-       "       -5.7190e-01, -5.2306e-01, -1.2670e-01, -9.8678e-02, -5.3463e-01,\n",
-       "        2.8607e-01, -3.7501e-01,  4.5742e-01,  4.5975e-02, -2.4675e-01,\n",
-       "        4.5656e-02, -3.8302e-01, -9.3711e-01,  3.9138e-02, -5.3911e-01],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"Key 'sun pharma' not present\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4446/3927296414.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sun pharma'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/projects/nlp/nlp_env/lib/python3.9/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mget_vector\u001b[0;34m(self, key, norm)\u001b[0m\n\u001b[1;32m    436\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    437\u001b[0m         \"\"\"\n\u001b[0;32m--> 438\u001b[0;31m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    439\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    440\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_norms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/projects/nlp/nlp_env/lib/python3.9/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mget_index\u001b[0;34m(self, key, default)\u001b[0m\n\u001b[1;32m    410\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    411\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 412\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Key '{key}' not present\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    413\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    414\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"Key 'sun pharma' not present\""
+     ]
     }
    ],
    "source": [
-    "model.get_vector('man')"
+    "vec = model.get_vector('head')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('purchase', 0.8554345369338989),\n",
-       " ('sell', 0.8126757144927979),\n",
-       " ('auction', 0.7646028995513916),\n",
-       " ('buy', 0.7385357618331909),\n",
-       " ('sold', 0.7364224195480347),\n",
-       " ('acquisition', 0.7254613041877747),\n",
-       " ('selling', 0.7237462997436523),\n",
-       " ('buying', 0.7197702527046204),\n",
-       " ('purchases', 0.7190312147140503),\n",
-       " ('bought', 0.6932434439659119)]"
+       "[('heads', 0.7987037301063538),\n",
+       " ('headed', 0.7012753486633301),\n",
+       " ('chief', 0.6871476173400879),\n",
+       " ('body', 0.6832915544509888),\n",
+       " ('assistant', 0.6749846339225769),\n",
+       " ('chair', 0.6700454950332642),\n",
+       " ('hand', 0.6661801934242249),\n",
+       " ('former', 0.6614510416984558),\n",
+       " ('senior', 0.6608334183692932),\n",
+       " ('hands', 0.65804123878479),\n",
+       " ('left', 0.6491575241088867),\n",
+       " ('standing', 0.6491572260856628),\n",
+       " ('arm', 0.6478977799415588),\n",
+       " ('director', 0.645720362663269),\n",
+       " ('vice', 0.6456282734870911),\n",
+       " ('the', 0.6433969736099243),\n",
+       " ('top', 0.6390494704246521),\n",
+       " ('turned', 0.6363109946250916),\n",
+       " ('back', 0.6358521580696106),\n",
+       " ('executive', 0.6343867182731628)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.most_similar('sale')"
+    "model.most_similar('head', topn=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('abbott', 0.9999998807907104),\n",
+       " ('roche', 0.6207159757614136),\n",
+       " ('myers', 0.5892712473869324),\n",
+       " ('clark', 0.5875697731971741),\n",
+       " ('baxter', 0.5858057737350464),\n",
+       " ('jacobs', 0.5677716732025146),\n",
+       " ('rohch', 0.5668755173683167),\n",
+       " ('russell', 0.5658555030822754),\n",
+       " ('kline', 0.5602982640266418),\n",
+       " ('anderson', 0.5543701648712158),\n",
+       " ('barr', 0.5536861419677734),\n",
+       " ('lowe', 0.5495097637176514),\n",
+       " ('reynolds', 0.5471750497817993),\n",
+       " ('morris', 0.5459015965461731),\n",
+       " ('cameron', 0.5422135591506958),\n",
+       " ('hayes', 0.5417216420173645),\n",
+       " ('campbell', 0.5409864187240601),\n",
+       " ('shaw', 0.5396159887313843),\n",
+       " ('rogers', 0.5385615825653076),\n",
+       " ('briggs', 0.5367546677589417)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.similar_by_vector(vec, topn=20)"
    ]
   },
   {
