--- a/notebooks/nlq.ipynb
+++ b/notebooks/nlq.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,25 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sales -> NOUN -> O -> \n"
+      "service -> NOUN -> O -> \n",
+      "delivery -> NOUN -> O -> \n",
+      "head -> NOUN -> O -> \n",
+      "ta -> INTJ -> O -> \n",
+      "name -> NOUN -> O -> \n"
      ]
     }
    ],
    "source": [
-    "word = \"sales\"\n",
+    "word = \"service_delivery_head_ta_name\"\n",
     "\n",
-    "# word_split = word.split(\"_\")\n",
+    "word_split = word.split(\"_\")\n",
     "\n",
-    "# for split_word in word_split:\n",
-    "for token in nlp(word):\n",
-    "    print(f\"{token.text} -> {token.pos_} -> {token.ent_iob_} -> {token.ent_type_}\")"
+    "for split_word in word_split:\n",
+    "    for token in nlp(split_word):\n",
+    "        print(f\"{token.text} -> {token.pos_} -> {token.ent_iob_} -> {token.ent_type_}\")"
    ]
   },
   {
@@ -533,12 +537,12 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "12466f790b01845891e8c54f2878097070b87efd364ef8a7c7054cc189b73841"
+   "hash": "3502c2d8a44f1d370a9f7e349ee408832b67c21c31bd8924b7b4cde15de44893"
   },
   "kernelspec": {
    "display_name": "Python 3.9.1 64-bit ('nlp_env': venv)",
    "language": "python",
-   "name": "python391jvsc74a57bd03502c2d8a44f1d370a9f7e349ee408832b67c21c31bd8924b7b4cde15de44893"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
