Chore: Execution changes

--- a/notebooks/Gensim word vector visualization.ipynb
+++ b/notebooks/Gensim word vector visualization.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4446/2717871490.py:3: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
+      "/tmp/ipykernel_11054/2717871490.py:3: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
       "  glove2word2vec(glove_file, word2vec_glove_file)\n"
      ]
     },
@@ -112,41 +112,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('heads', 0.7987037301063538),\n",
-       " ('headed', 0.7012753486633301),\n",
-       " ('chief', 0.6871476173400879),\n",
-       " ('body', 0.6832915544509888),\n",
-       " ('assistant', 0.6749846339225769),\n",
-       " ('chair', 0.6700454950332642),\n",
-       " ('hand', 0.6661801934242249),\n",
-       " ('former', 0.6614510416984558),\n",
-       " ('senior', 0.6608334183692932),\n",
-       " ('hands', 0.65804123878479),\n",
-       " ('left', 0.6491575241088867),\n",
-       " ('standing', 0.6491572260856628),\n",
-       " ('arm', 0.6478977799415588),\n",
-       " ('director', 0.645720362663269),\n",
-       " ('vice', 0.6456282734870911),\n",
-       " ('the', 0.6433969736099243),\n",
-       " ('top', 0.6390494704246521),\n",
-       " ('turned', 0.6363109946250916),\n",
-       " ('back', 0.6358521580696106),\n",
-       " ('executive', 0.6343867182731628)]"
+       "[('rates', 0.9191825985908508),\n",
+       " ('inflation', 0.782524824142456),\n",
+       " ('increases', 0.7770980596542358),\n",
+       " ('rise', 0.7459970712661743),\n",
+       " ('higher', 0.7445486783981323),\n",
+       " ('increase', 0.7373809218406677),\n",
+       " ('low', 0.7282389402389526),\n",
+       " ('growth', 0.7270269393920898),\n",
+       " ('unemployment', 0.7264869809150696),\n",
+       " ('interest', 0.7184916138648987),\n",
+       " ('lowest', 0.7058550119400024),\n",
+       " ('drop', 0.7046894431114197),\n",
+       " ('percentage', 0.6980919241905212),\n",
+       " ('increased', 0.6978114247322083),\n",
+       " ('decline', 0.6947351694107056),\n",
+       " ('borrowing', 0.6922765970230103),\n",
+       " ('price', 0.6886308193206787),\n",
+       " ('percent', 0.6856186389923096),\n",
+       " ('levels', 0.68382728099823),\n",
+       " ('decrease', 0.6773386001586914),\n",
+       " ('lower', 0.6770303845405579),\n",
+       " ('prices', 0.674651026725769),\n",
+       " ('reduction', 0.6684268116950989),\n",
+       " ('rising', 0.6671502590179443),\n",
+       " ('ratio', 0.6595821976661682),\n",
+       " ('steady', 0.6580987572669983),\n",
+       " ('compared', 0.6553951501846313),\n",
+       " ('lending', 0.6549373865127563),\n",
+       " ('average', 0.6548731923103333),\n",
+       " ('yields', 0.6542277932167053),\n",
+       " ('gdp', 0.6512076258659363),\n",
+       " ('trend', 0.6434495449066162),\n",
+       " ('income', 0.6422339081764221),\n",
+       " ('reduced', 0.6417255401611328),\n",
+       " ('basis', 0.6415715217590332),\n",
+       " ('costs', 0.6408175230026245),\n",
+       " ('below', 0.6388291120529175),\n",
+       " ('current', 0.632427990436554),\n",
+       " ('increasing', 0.6316828727722168),\n",
+       " ('level', 0.6312851309776306),\n",
+       " ('yield', 0.6289252042770386),\n",
+       " ('decreased', 0.6284883618354797),\n",
+       " ('value', 0.6282413601875305),\n",
+       " ('bond', 0.6249140501022339),\n",
+       " ('comparable', 0.6230406165122986),\n",
+       " ('consumption', 0.6223025321960449),\n",
+       " ('hike', 0.6211836934089661),\n",
+       " ('risen', 0.6207816004753113),\n",
+       " ('cost', 0.6207728385925293),\n",
+       " ('activity', 0.6205642223358154)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.most_similar('head', topn=20)"
+    "model.most_similar('rate', topn=50)"
    ]
   },
   {
