Update: Experimentation on word embeddings

--- a/notebooks/Gensim word vector visualization.ipynb
+++ b/notebooks/Gensim word vector visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,31 @@
     "\n",
     "from gensim.test.utils import datapath, get_tmpfile\n",
     "from gensim.models import KeyedVectors\n",
-    "from gensim.scripts.glove2word2vec import glove2word2vec"
+    "from gensim.scripts.glove2word2vec import glove2word2vec\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "import math\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'corpus'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "lemmatizer.lemmatize(\"corpora\")"
    ]
   },
   {
@@ -57,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11054/2717871490.py:3: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
+      "/tmp/ipykernel_20667/3953271950.py:5: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
       "  glove2word2vec(glove_file, word2vec_glove_file)\n"
      ]
     },
@@ -73,7 +97,9 @@
     }
    ],
    "source": [
-    "glove_file = datapath('/home/aum/Desktop/projects/nlp/models/glove.6B.100d.txt')\n",
+    "# glove_file = datapath('/home/aum/Desktop/projects/nlp/models/glove.6B.100d.txt')\n",
+    "glove_file = datapath('/home/aumaron/Desktop/nlp/nlp_playground/models/glove.6B/glove.6B.100d.txt')\n",
+    "\n",
     "word2vec_glove_file = get_tmpfile(\"glove.6B.100d.word2vec.txt\")\n",
     "glove2word2vec(glove_file, word2vec_glove_file)"
    ]
@@ -89,127 +115,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec = model.get_vector('%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"Key 'sun pharma' not present\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_4446/3927296414.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sun pharma'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Desktop/projects/nlp/nlp_env/lib/python3.9/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mget_vector\u001b[0;34m(self, key, norm)\u001b[0m\n\u001b[1;32m    436\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    437\u001b[0m         \"\"\"\n\u001b[0;32m--> 438\u001b[0;31m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    439\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    440\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_norms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/projects/nlp/nlp_env/lib/python3.9/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mget_index\u001b[0;34m(self, key, default)\u001b[0m\n\u001b[1;32m    410\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    411\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 412\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Key '{key}' not present\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    413\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    414\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"Key 'sun pharma' not present\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999999 0.0004882812548506386\n"
      ]
     }
    ],
    "source": [
-    "vec = model.get_vector('head')"
+    "words = ['head', 'service', 'amount', 'delivery']\n",
+    "word_vec = []\n",
+    "theta, angle = vector_cosine(model.get_vector('good'), model.get_vector('good'))\n",
+    "print(theta, angle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('rates', 0.9191825985908508),\n",
-       " ('inflation', 0.782524824142456),\n",
-       " ('increases', 0.7770980596542358),\n",
-       " ('rise', 0.7459970712661743),\n",
-       " ('higher', 0.7445486783981323),\n",
-       " ('increase', 0.7373809218406677),\n",
-       " ('low', 0.7282389402389526),\n",
-       " ('growth', 0.7270269393920898),\n",
-       " ('unemployment', 0.7264869809150696),\n",
-       " ('interest', 0.7184916138648987),\n",
-       " ('lowest', 0.7058550119400024),\n",
-       " ('drop', 0.7046894431114197),\n",
-       " ('percentage', 0.6980919241905212),\n",
-       " ('increased', 0.6978114247322083),\n",
-       " ('decline', 0.6947351694107056),\n",
-       " ('borrowing', 0.6922765970230103),\n",
-       " ('price', 0.6886308193206787),\n",
-       " ('percent', 0.6856186389923096),\n",
-       " ('levels', 0.68382728099823),\n",
-       " ('decrease', 0.6773386001586914),\n",
-       " ('lower', 0.6770303845405579),\n",
-       " ('prices', 0.674651026725769),\n",
-       " ('reduction', 0.6684268116950989),\n",
-       " ('rising', 0.6671502590179443),\n",
-       " ('ratio', 0.6595821976661682),\n",
-       " ('steady', 0.6580987572669983),\n",
-       " ('compared', 0.6553951501846313),\n",
-       " ('lending', 0.6549373865127563),\n",
-       " ('average', 0.6548731923103333),\n",
-       " ('yields', 0.6542277932167053),\n",
-       " ('gdp', 0.6512076258659363),\n",
-       " ('trend', 0.6434495449066162),\n",
-       " ('income', 0.6422339081764221),\n",
-       " ('reduced', 0.6417255401611328),\n",
-       " ('basis', 0.6415715217590332),\n",
-       " ('costs', 0.6408175230026245),\n",
-       " ('below', 0.6388291120529175),\n",
-       " ('current', 0.632427990436554),\n",
-       " ('increasing', 0.6316828727722168),\n",
-       " ('level', 0.6312851309776306),\n",
-       " ('yield', 0.6289252042770386),\n",
-       " ('decreased', 0.6284883618354797),\n",
-       " ('value', 0.6282413601875305),\n",
-       " ('bond', 0.6249140501022339),\n",
-       " ('comparable', 0.6230406165122986),\n",
-       " ('consumption', 0.6223025321960449),\n",
-       " ('hike', 0.6211836934089661),\n",
-       " ('risen', 0.6207816004753113),\n",
-       " ('cost', 0.6207728385925293),\n",
-       " ('activity', 0.6205642223358154)]"
+       "[('%', 1.0000001192092896),\n",
+       " ('endtag', 0.8839346170425415),\n",
+       " ('percent', 0.737031877040863),\n",
+       " ('65', 0.6785624027252197),\n",
+       " ('45', 0.6747076511383057),\n",
+       " ('12.5', 0.6611534953117371),\n",
+       " ('percentage', 0.6586810946464539),\n",
+       " ('population', 0.6583649516105652),\n",
+       " ('3.4', 0.6506030559539795),\n",
+       " ('44', 0.6477334499359131),\n",
+       " ('compared', 0.6469976305961609),\n",
+       " ('4.3', 0.6452640295028687),\n",
+       " ('0.5', 0.6449995636940002),\n",
+       " ('8.6', 0.6432296633720398),\n",
+       " ('3.9', 0.6378958225250244),\n",
+       " ('3.6', 0.6377308368682861),\n",
+       " ('4.7', 0.6374964714050293),\n",
+       " ('9.5', 0.6373503804206848),\n",
+       " ('8.4', 0.6365607380867004),\n",
+       " ('3.1', 0.635673463344574)]"
       ]
      },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.most_similar('rate', topn=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('abbott', 0.9999998807907104),\n",
-       " ('roche', 0.6207159757614136),\n",
-       " ('myers', 0.5892712473869324),\n",
-       " ('clark', 0.5875697731971741),\n",
-       " ('baxter', 0.5858057737350464),\n",
-       " ('jacobs', 0.5677716732025146),\n",
-       " ('rohch', 0.5668755173683167),\n",
-       " ('russell', 0.5658555030822754),\n",
-       " ('kline', 0.5602982640266418),\n",
-       " ('anderson', 0.5543701648712158),\n",
-       " ('barr', 0.5536861419677734),\n",
-       " ('lowe', 0.5495097637176514),\n",
-       " ('reynolds', 0.5471750497817993),\n",
-       " ('morris', 0.5459015965461731),\n",
-       " ('cameron', 0.5422135591506958),\n",
-       " ('hayes', 0.5417216420173645),\n",
-       " ('campbell', 0.5409864187240601),\n",
-       " ('shaw', 0.5396159887313843),\n",
-       " ('rogers', 0.5385615825653076),\n",
-       " ('briggs', 0.5367546677589417)]"
-      ]
-     },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,31 +183,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('coconut', 0.7097253203392029),\n",
-       " ('mango', 0.7054824829101562),\n",
-       " ('bananas', 0.6887733340263367),\n",
-       " ('potato', 0.6629636287689209),\n",
-       " ('pineapple', 0.6534532308578491),\n",
-       " ('fruit', 0.6519854664802551),\n",
-       " ('peanut', 0.6420575976371765),\n",
-       " ('pecan', 0.6349173188209534),\n",
-       " ('cashew', 0.6294420957565308),\n",
-       " ('papaya', 0.6246591210365295)]"
+       "[('organization', 0.8785004615783691),\n",
+       " ('organisations', 0.776595413684845),\n",
+       " ('organizations', 0.710951030254364),\n",
+       " ('umbrella', 0.6890354156494141),\n",
+       " ('non-governmental', 0.631799042224884),\n",
+       " ('group', 0.6272708773612976),\n",
+       " ('governing', 0.6267632246017456),\n",
+       " ('union', 0.6235829591751099),\n",
+       " ('federation', 0.620549738407135),\n",
+       " ('groups', 0.6179574728012085)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.most_similar('banana')"
+    "model.most_similar('organisation')"
    ]
   },
   {
@@ -278,6 +241,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vector_cosine(a, b):\n",
+    "    cos_theta = a.dot(b.T)/(np.sqrt(np.sum(np.square(a)))*(np.sqrt(np.sum(np.square(b)))))\n",
+    "    _angle = math.acos(cos_theta)\n",
+    "\n",
+    "    return cos_theta, _angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat1 = np.array([1,2,3,4,5])\n",
+    "mat2 = np.array([[1,2,3,4,5], [2,3,4,5,6], [1,2,5,7,9]])\n",
+    "theta_list = []\n",
+    "for column_vec in range(mat2.T.shape[1]):\n",
+    "    vec_product = vector_cosine(mat1, mat2.T[:, column_vec])\n",
+    "    theta_list.append(vec_product)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.0, 0.9949366763261821, 0.9913833310535884]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([55, 70, 93])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat1.__matmul__(mat2.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mxn == nxp\n",
+    "1x5 == 5x5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -296,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
