--- a/notebooks/nlq.ipynb
+++ b/notebooks/nlq.ipynb
@@ -609,7 +609,7 @@
    "hash": "3502c2d8a44f1d370a9f7e349ee408832b67c21c31bd8924b7b4cde15de44893"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.1 64-bit ('nlp_env': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -623,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
