--- a/notebooks/entity_recognition.ipynb
+++ b/notebooks/entity_recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import spacy\n",
     "import re\n",
+    "import math\n",
     "from typing import List\n",
     "\n",
     "from gensim.test.utils import datapath, get_tmpfile\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,7 @@
        "100"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "branch manager\n"
+      "taluka name\n"
      ]
     }
    ],
    "source": [
-    "column_name = 'branch_manager'\n",
+    "column_name = 'taluka_name'\n",
     "column_name =  re.sub(r'[@_!#$%^&*()<>?[\\]./\\\\|}{~:-]', ' ', column_name)  # Removal of special characters\n",
     "column_name = re.sub(r\"[ ]{2,}\", \" \", column_name)  # Remove additional spaces\n",
     "print(column_name)"
@@ -119,12 +120,15 @@
     "4. Future scope:\n",
     "    % is removed as a character\n",
     "    Certain columns containing '%' in the beginning or end are percentage columns\n",
-    "    Need to add the exception for %"
+    "    Need to add the exception for %\n",
+    "    \n",
+    "5 Challenges -\n",
+    "    - latitude-longitude"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,24 +160,16 @@
     "        for each_object in filtered_list:\n",
     "            entity_list.append({each_object.get(\"name\"): each_object.get(\"entity\")})\n",
     "    else:\n",
-    "        entity_list = []\n",
+    "        entity_list = [{root_word: \"\"}]\n",
     "    \n",
     "    return entity_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "70.2 µs ± 381 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%timeit\n",
     "\n",
@@ -192,46 +188,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%timeit\n",
+    "\n",
+    "def vector_cosine(a, b):\n",
+    "    cos_theta = a.dot(b.T)/(np.sqrt(np.sum(np.square(a)))*(np.sqrt(np.sum(np.square(b)))))\n",
+    "    _angle = math.acos(cos_theta)\n",
+    "\n",
+    "    return cos_theta, _angle\n",
+    "\n",
+    "\n",
+    "def get_closest_word(root_word_embedding: np.ndarray, \n",
+    "                     matrix: np.ndarray):\n",
+    "    theta_list = []\n",
+    "    angle_list = []\n",
+    "    for column_vec in range(matrix.T.shape[1]):\n",
+    "        doc_product, angle_between_vectors = vector_cosine(root_word_embedding, matrix.T[:, column_vec])\n",
+    "        theta_list.append(doc_product)\n",
+    "        angle_list.append(angle_between_vectors)\n",
+    "    # TODO: Can add cut-offs\n",
+    "    print(theta_list)\n",
+    "    print(theta_list.index(max(theta_list)))\n",
+    "    print(theta_list[theta_list.index(max(theta_list))])\n",
+    "    print(angle_list.index(min(angle_list)))\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[{'branch': 'Location'}, {'branch': 'Organisation'}]\n",
-      "(64, 100)\n"
+      "(66, 100)\n",
+      "['PERSON']\n"
      ]
     }
    ],
    "source": [
-    "# Step 1 \n",
-    "entity_list = model_based_ner(column_name)\n",
-    "print(entity_list)\n",
+    "# Step 0\n",
+    "corpus_array = construct_corpus_matrix(intermediate_corpus, model)\n",
+    "print(corpus_array.shape)\n",
     "\n",
-    "# Step 2: Find \n",
-    "if not entity_list:\n",
+    "# Step 1 \n",
+    "entity_from_model = model_based_ner(column_name)\n",
+    "print(entity_from_model)\n",
+    "\n",
+    "# Step 2: Find in corpus\n",
+    "if not entity_from_model:\n",
     "    word_split = column_name.split(\" \")\n",
     "    # Step 2.a: Find sub_words in corpus\n",
     "    entity_from_corpus = []\n",
     "    for word in word_split:\n",
-    "        entity_from_corpus.extend(find_in_corpus(word, intermediate_corpus))\n",
+    "        entity_from_corpus.extend(find_in_corpus(word, intermediate_corpus))  # Can be replaced using a mat mul\n",
+    "    print(entity_from_corpus)\n",
+    "    \n",
     "    # Step 2.b: Find if the last sub_word has returned an entity\n",
     "    # Note: There can be 4 possibilities:\n",
     "        # 1. All sub words can return entity\n",
     "        # 2. Any sub_word other than the trailing sub_word returns an entity\n",
     "        # 3. Any sub_word including the trailing sub_word returns an entity\n",
     "        # 4. None of them return an entity\n",
+    "    \n",
+    "    # Check if last word has empty entity\n",
+    "    last_sub_word_entity = list(filter(lambda word_is: word_is.get(word_split[-1]) == \"\", entity_from_corpus))\n",
+    "    print(last_sub_word_entity)\n",
+    "    \n",
+    "    # If non-empty, then check this word in corpus\n",
+    "    if last_sub_word_entity:\n",
+    "        theta_list = []\n",
+    "        last_word_embedding = model.get_vector(word_split[-1])\n",
+    "        get_closest_word(last_word_embedding, corpus_array)\n",
     "        \n",
-    "    print(entity_from_corpus)\n",
-    "    corpus_array = construct_corpus_matrix(intermediate_corpus, model)\n",
-    "    print(corpus_array.shape)\n",
+    "        \n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
     "# corpus_array = construct_corpus_matrix(intermediate_corpus, model)\n",
     "# corpus_array.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 60, 'name': 'profit', 'entity': 'Revenue'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intermediate_corpus[60]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
