Chore: Experimentation on embeddings

--- a/notebooks/Gensim word vector visualization.ipynb
+++ b/notebooks/Gensim word vector visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,35 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package wordnet to /home/aum/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'corpus'"
+       "'Americans'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nltk.download('wordnet')\n",
+    "# nltk.download('wordnet')\n",
     "lemmatizer = nltk.stem.WordNetLemmatizer()\n",
     "\n",
-    "lemmatizer.lemmatize(\"corpora\")"
+    "lemmatizer.lemmatize(\"\")"
    ]
   },
   {
