--- a/notebooks/entity_recognition.ipynb
+++ b/notebooks/entity_recognition.ipynb
@@ -11,28 +11,46 @@
     "import spacy\n",
     "import re\n",
     "import math\n",
-    "from typing import List\n",
+    "from typing import List, Optional\n",
     "\n",
     "from gensim.test.utils import datapath, get_tmpfile\n",
     "from gensim.models import KeyedVectors\n",
-    "from gensim.scripts.glove2word2vec import glove2word2vec"
+    "from gensim.scripts.glove2word2vec import glove2word2vec\n",
+    "\n",
+    "# Transformer libraries\n",
+    "from sentence_transformers import SentenceTransformer # For estimating the distance between (sub)sequences\n",
+    "from sentence_transformers import util"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate SBERT\n",
+    "sentence_model = SentenceTransformer('all-mpnet-base-v2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_27696/1039543407.py:8: DeprecationWarning: Call to deprecated `glove2word2vec` (KeyedVectors.load_word2vec_format(.., binary=False, no_header=True) loads GLoVE text vectors.).\n",
+      "  glove2word2vec(glove_file, word2vec_glove_file)\n"
+     ]
+    }
+   ],
    "source": [
-    "nlp = spacy.load(\"en_core_web_trf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Load spacy language model\n",
+    "nlp = spacy.load(\"en_core_web_trf\")\n",
+    "\n",
+    "# Load the GloVe embeddings\n",
     "glove_file = datapath('/home/aum/Desktop/projects/nlp/models/glove.6B.100d.txt')\n",
     "# glove_file = datapath('/home/aumaron/Desktop/nlp/nlp_playground/models/glove.6B/glove.6B.100d.txt')\n",
     "word2vec_glove_file = get_tmpfile(\"glove.6B.100d.word2vec.txt\")\n",
@@ -43,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,18 +70,20 @@
        "100"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Dimensional space of the embeddings\n",
+    "\n",
     "model[model.index_to_key[0]].shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,22 +112,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "taluka name\n"
+      "order id\n"
      ]
     }
    ],
    "source": [
-    "column_name = 'taluka_name'\n",
+    "column_name = 'order_id'\n",
     "column_name =  re.sub(r'[@_!#$%^&*()<>?[\\]./\\\\|}{~:-]', ' ', column_name)  # Removal of special characters\n",
     "column_name = re.sub(r\"[ ]{2,}\", \" \", column_name)  # Remove additional spaces\n",
     "print(column_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100,)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# \n",
+    "\n",
+    "query_embedding = sentence_model.encode([column_name])"
    ]
   },
   {
@@ -122,13 +164,19 @@
     "    Certain columns containing '%' in the beginning or end are percentage columns\n",
     "    Need to add the exception for %\n",
     "    \n",
-    "5 Challenges -\n",
-    "    - latitude-longitude"
+    "5. Challenges -\n",
+    "    - False positives in model based NER\n",
+    "    \n",
+    "6. Future scope and experimentation\n",
+    "    - Try 200d vectors\n",
+    "    - Try 300d vectors\n",
+    "    - Try 768d BERT embeddings (non context specific word embeddings)\n",
+    "    - Try extracting phrase (in this case column names) embeddings as a whole"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +186,7 @@
     "    word = nlp(column_name)\n",
     "    entity_list = []\n",
     "    for token in word:\n",
-    "#         print(f\"{token.ent_iob_} -> {token.ent_type_}\")\n",
+    "        print(f\"{token.ent_iob_} -> {token.ent_type_}\")\n",
     "        if token.ent_type_:\n",
     "            entity_list.append(token.ent_type_)\n",
     "    \n",
@@ -147,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %%timeit\n",
     "\n",
-    "def vector_cosine(a, b):\n",
+    "def embedding_product(a, b):\n",
     "    cos_theta = a.dot(b.T)/(np.sqrt(np.sum(np.square(a)))*(np.sqrt(np.sum(np.square(b)))))\n",
     "    _angle = math.acos(cos_theta)\n",
     "\n",
@@ -202,44 +250,66 @@
     "\n",
     "\n",
     "def get_closest_word(root_word_embedding: np.ndarray, \n",
-    "                     matrix: np.ndarray):\n",
+    "                     matrix: np.ndarray,\n",
+    "                     confidence_required: Optional[float] = 0.5):\n",
     "    theta_list = []\n",
     "    angle_list = []\n",
     "    for column_vec in range(matrix.T.shape[1]):\n",
-    "        doc_product, angle_between_vectors = vector_cosine(root_word_embedding, matrix.T[:, column_vec])\n",
+    "        doc_product, angle_between_vectors = embedding_product(root_word_embedding, matrix.T[:, column_vec])\n",
     "        theta_list.append(doc_product)\n",
-    "        angle_list.append(angle_between_vectors)\n",
-    "    # TODO: Can add cut-offs\n",
-    "    print(theta_list)\n",
-    "    print(theta_list.index(max(theta_list)))\n",
-    "    print(theta_list[theta_list.index(max(theta_list))])\n",
-    "    print(angle_list.index(min(angle_list)))\n",
+    "        angle_list.append(angle_between_vectors)  # If needed for validation\n",
     "    \n",
-    "    "
+    "    # Cut-off: filter theta list based on the confidence required\n",
+    "    filtered_theta_index_list = [theta_list.index(score) for score in theta_list if np.abs(score)>=confidence_required]\n",
+    "    \n",
+    "    # Find index of the top score\n",
+    "    closest_vector = None\n",
+    "    if filtered_theta_index_list:\n",
+    "        closest_vector = theta_list.index(max([theta_list[filter_index] for filter_index in filtered_theta_index_list]))\n",
+    "        \n",
+    "#     print(theta_list)\n",
+    "#     print(theta_list.index(max(theta_list)))\n",
+    "#     print(theta_list[theta_list.index(max(theta_list))])\n",
+    "#     print(angle_list.index(min(angle_list)))\n",
+    "    \n",
+    "    return closest_vector\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(66, 100)\n",
-      "['PERSON']\n"
+      "O -> \n",
+      "O -> \n",
+      "O -> \n",
+      "Model NER ->  []\n",
+      "Simple search in Corpus ->  [{'order': ''}, {'id': ''}]\n",
+      "Last word entity ->  [{'id': ''}]\n",
+      "Updated entity object ->  [{'order': ''}, {'id': {'id': 35, 'name': 'user', 'entity': 'Person'}}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_27696/1478938175.py:4: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  cos_theta = a.dot(b.T)/(np.sqrt(np.sum(np.square(a)))*(np.sqrt(np.sum(np.square(b)))))\n"
      ]
     }
    ],
    "source": [
     "# Step 0\n",
     "corpus_array = construct_corpus_matrix(intermediate_corpus, model)\n",
-    "print(corpus_array.shape)\n",
+    "# print(corpus_array.shape)\n",
     "\n",
     "# Step 1 \n",
     "entity_from_model = model_based_ner(column_name)\n",
-    "print(entity_from_model)\n",
+    "print('Model NER -> ', entity_from_model)\n",
     "\n",
     "# Step 2: Find in corpus\n",
     "if not entity_from_model:\n",
@@ -248,7 +318,7 @@
     "    entity_from_corpus = []\n",
     "    for word in word_split:\n",
     "        entity_from_corpus.extend(find_in_corpus(word, intermediate_corpus))  # Can be replaced using a mat mul\n",
-    "    print(entity_from_corpus)\n",
+    "    print('Simple search in Corpus -> ', entity_from_corpus)\n",
     "    \n",
     "    # Step 2.b: Find if the last sub_word has returned an entity\n",
     "    # Note: There can be 4 possibilities:\n",
@@ -257,17 +327,19 @@
     "        # 3. Any sub_word including the trailing sub_word returns an entity\n",
     "        # 4. None of them return an entity\n",
     "    \n",
-    "    # Check if last word has empty entity\n",
+    "    # 2.b.1: Check if all words contain\n",
+    "    # 2.b.2: Check if last word has empty entity\n",
     "    last_sub_word_entity = list(filter(lambda word_is: word_is.get(word_split[-1]) == \"\", entity_from_corpus))\n",
-    "    print(last_sub_word_entity)\n",
+    "    print('Last word entity -> ', last_sub_word_entity)\n",
     "    \n",
     "    # If non-empty, then check this word in corpus\n",
     "    if last_sub_word_entity:\n",
     "        theta_list = []\n",
     "        last_word_embedding = model.get_vector(word_split[-1])\n",
-    "        get_closest_word(last_word_embedding, corpus_array)\n",
-    "        \n",
-    "        \n",
+    "        closest_index = get_closest_word(last_word_embedding.squeeze()[:100], corpus_array, 0)\n",
+    "        closest_entity = intermediate_corpus[closest_index] if (closest_index or closest_index == 0) else \"\"\n",
+    "        entity_from_corpus[-1].update({word_split[-1]: closest_entity[]})\n",
+    "        print('Updated entity object -> ', entity_from_corpus)\n",
     "    \n",
     "    \n",
     "\n",
@@ -278,22 +350,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 60, 'name': 'profit', 'entity': 'Revenue'}"
+       "{'id': 26, 'name': 'vendor', 'entity': 'Organisation'}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "intermediate_corpus[60]"
+    "intermediate_corpus[26]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.83234936 0.5874632370639816\n"
+     ]
+    }
+   ],
+   "source": [
+    "sneaker = model.get_vector(\"man\")\n",
+    "shoes = model.get_vector(\"woman\")\n",
+    "\n",
+    "dot_prod, angle = vector_cosine(sneaker, shoes)\n",
+    "print(dot_prod, angle)"
    ]
   },
   {
@@ -305,6 +426,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "3502c2d8a44f1d370a9f7e349ee408832b67c21c31bd8924b7b4cde15de44893"
+  },
   "kernelspec": {
    "display_name": "Python 3.9.1 64-bit ('nlp_env': venv)",
    "language": "python",
